# total-rekall

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION-SYSTEM.md  FEATURES.md  FINAL-STATUS.md  HANDOFF.md  PERFORMANCE-ANALYSIS.md  PHASE-2-DESIGN.md  PLAN.md  PROCESS.md  README.md  RELIABILITY-ANALYSIS.md  ROADMAP.md  SECURITY.md  SHOWCASE.md  UX-ANALYSIS.md  WILD-FEATURES-SUMMARY.md  check_features.py  conftest.py  fsrs-status.json  intelligence.db  pyproject.toml  test_fsrs_pool.db-shm  test_fsrs_pool.db-wal  test_pool.db-shm  test_pool.db-wal
QA/: EXECUTIVE-SUMMARY.md  PRODUCT-QA-FINDINGS-2026-02-02.md
dashboard/: index.html  server.py
docs/: wild-features-integration.md  wild-features.md
docs/features/: integrations.md  intelligence-layer.md  multimodal-meta-learning.md  wild-features-api.md
docs/gap-analysis/: build-specs.md  feature-stubs.md  ideas.md  ui-api-surface.md
docs/implementation-plans/: F25-memory-clustering-plan.md  F26-memory-summarization-plan.md  F29-memory-import-export-plan.md
examples/: wild_features_demo.py
hooks/: session-memory-consolidation-async.py  topic_resumption_detector.py
launch-agents/: com.memory.daily-summary.plist
scripts/: batch_operations.py  conflict_resolution_ui.py  consolidation_worker.py  generate_daily_summary.py  nightly_embedding_precompute.py  nightly_maintenance_master.py  nightly_optimizer.py  pattern_detection_runner.py  search_by_session.py  seed_session_history.py  seed_session_history_v2.py  session_history.py  test_pre_compaction.py  weekly_synthesis_runner.py
src/: access_tracker.py  advanced_capture.py  ai_analysis.py  api.py  async_consolidation.py  circuit_breaker.py  confidence_persistence.py  confidence_scoring.py  config.py  content_dedup.py  context_budget.py  contradiction_detector.py  conversation_compactor.py  correction_promoter.py  cross_client_synthesizer.py  cross_project_sharing.py  daily_episodic_summary.py  daily_memory_maintenance.py  dashboard_export.py  db_pool.py  decision_journal.py  directed_forgetting.py  embedding_manager.py  emotional_tagging.py  encoding_depth.py  entity_extractor.py  event_detector.py  event_stream.py  forgetting_curve.py  fsrs_scheduler.py  generational_gc.py  hybrid_search.py  importance_auto_tuning.py  integrations.py  intelligence.db  intelligence_db.py  intelligence_orchestrator.py  lifespan_prediction.py  llm_extractor.py  log_rotation.py  (+26 more)
src/automation/: __init__.py  alerts.py  quality.py  search.py  summarization.py  triggers.py
src/intelligence/: __init__.py  clustering.py  database.py  reinforcement_scheduler.py  relationship_mapper.py  relationships.py  search_optimizer.py  summarization.py  versioning.py
src/multimodal/: __init__.py  code_memory.py  decision_journal.py  image_capture.py  voice_capture.py
src/wild/: __init__.py  ab_tester.py  conflict_predictor.py  context_preloader.py  decay_predictor.py  dream_synthesizer.py  energy_scheduler.py  expertise_mapper.py  frustration_detector.py  integrations.py  intelligence_db.py  learning_interventioner.py  learning_velocity.py  lifespan_integration.py  mistake_cascade.py  momentum_tracker.py  (+8 more)
tests/: _skip_test_weekly_synthesis.py  test_access_tracker.py  test_circuit_breaker.py  test_confidence_persistence.py  test_content_dedup.py  test_context_budget.py  test_contradiction_detector.py  test_cross_client_synthesizer.py  test_daily_episodic_summary.py  test_daily_memory_maintenance.py  test_directed_forgetting.py  test_emotional_tagging.py  test_encoding_depth.py  test_entity_extractor.py  test_event_stream.py  test_features_45_50.py  test_fsrs_scheduler.py  test_generational_gc.py  test_hybrid_search.py  test_importance_engine.py  test_intelligence_db.py  test_intelligence_db_pool.py  test_intelligence_orchestrator.py  test_llm_extractor.py  test_log_rotation.py  test_memory_clustering.py  test_memory_compressor.py  test_memory_decay_archival.py  test_memory_health.py  test_memory_pagerank.py  test_memory_system_api.py  test_memory_ts_client.py  test_memory_versioning.py  test_pattern_detector.py  test_project_resolver.py  test_promotion_executor.py  test_reference_counter.py  test_relevance_explanation.py  test_retrieval_forgetting.py  test_schema_classifier.py  (+3 more)
(+40 files in other folders)
