[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "total-rekall"
version = "0.17.0"
description = "Intelligent memory system for Claude Code — extract, grade, search, and synthesize knowledge across sessions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Lee Fuhr" },
]
keywords = [
    "claude",
    "claude-code",
    "memory",
    "ai",
    "llm",
    "knowledge-base",
    "spaced-repetition",
    "semantic-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/lee-fuhr/total-rekall"
Repository = "https://github.com/lee-fuhr/total-rekall"
Issues = "https://github.com/lee-fuhr/total-rekall/issues"

[project.optional-dependencies]
ml = [
    "sentence-transformers",
    "scikit-learn",
    "faiss-cpu>=1.7.0",
]
test = [
    "pytest>=7.0",
    "scikit-learn",
    "faiss-cpu>=1.7.0",
]

[tool.setuptools.package-dir]
"memory_system" = "src"
"memory_system.intelligence" = "src/intelligence"
"memory_system.automation" = "src/automation"
"memory_system.multimodal" = "src/multimodal"
"memory_system.wild" = "src/wild"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
